# opencoverage

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-nginx  Makefile  README.md  build.yaml  cov.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
app/: .dockerignore  Dockerfile  README.md  jest.config.js  next.config.js  package.json
app/components/: footer.js  header.js  layout.js  menu.js  report.js  reportlink.js
app/pages/: _app.js  index.js
app/pages/[org]/repos/[repo]/: index.js
app/pages/[org]/repos/[repo]/commits/[commit]/: file.js  report.js
app/pages/[org]/repos/[repo]/pulls/[pull]/[commit]/: file.js  report.js
app/pages/docs/: index.js
app/pages/docs/contributing/: index.js
app/pages/docs/hosting/: index.js
app/pages/docs/integration/: index.js
app/pages/reports/[org]/: [repo].js
app/pages/reports/[org]/[repo]/: [commit].js
app/public/: robots.txt  sitemap.xml
app/public/logo/: logo.ai  logo.psd
app/styles/: globals.sass
app/tests/: index.test.js
app/utils/: index.js
conf/nginx-templates/: default.conf.template
opencoverage/: commands.py  database.py  metrics.py  models.py  parser.py  reporter.py  settings.py  taskrunner.py  tasks.py  types.py  utils.py
opencoverage/api/: __init__.py  api.py  app.py  badge.py  upload.py
opencoverage/clients/: __init__.py
opencoverage/clients/scm/: __init__.py  base.py  exceptions.py  github.py
stubs/lxml/: etree.py
stubs/unidiff/: __init__.py
tests/: conftest.py  fixtures.py  utils.py
tests/acceptance/: fixtures.py  test_api.py
tests/data/: guillotina.coverage  lcov  test.pem
tests/integration/: test_github.py
tests/unit/: test_api.py  test_commands.py  test_database.py  test_parser.py  test_reporter.py  test_scm.py  test_taskrunner.py
